--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </div>
 
       <div class="headshot">
-        <img src="/images/jaya.jpg" alt="My Image">
+        <img src="./images/jaya.jpg" alt="My Image">
       </div>
     </section>
 
@@ -108,22 +108,22 @@
        <h2>My Projects</h2>
        <div class="project-grid-container">
         <div class="projects-flex-container">
-          <img src="/images/simon-game.png" alt=" ">
+          <img src="./images/simon-game.png" alt=" ">
           <a href="https://jayajo5.github.io/Simon-Game-Challenge/"target="_blank">Simon Game</a>
         </div>
 
         <div class="projects-flex-container">
-          <img src="/images/mini-calculator.png" alt="">
+          <img src="./images/mini-calculator.png" alt="">
           <a href="https://jayajo5.github.io/Mini-Calculator/" target="_blank">Calculator</a>
         </div>
 
         <div class="projects-flex-container">
-          <img src="/images/nft-preview-card.png" alt="">
+          <img src="./images/nft-preview-card.png" alt="">
           <a href="https://jayajo5.github.io/NFT-preview-card-component/" target="_blank">NFT Preview Card</a>
         </div>
 
         <div class="projects-flex-container">
-          <img src="/images/product-preview-card-desktop-view.png" alt="">
+          <img src="./images/product-preview-card-desktop-view.png" alt="">
           <a href="https://jayajo5.github.io/Product-preview-card/" target="_blank">Product Preview Card</a>
         </div>
        </div>
